--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -267,7 +267,7 @@
 
 			//--------------------------------------------------------------------
 
-			bundlesGestor = BaseDatos.Bundles.Buscar.Todos();
+			bundlesGestor = BaseDatos.Bundles.Buscar.Actuales();
 
 			if (bundlesGestor.Count > 0)
 			{
