--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -532,18 +532,10 @@ else
 				@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsMore", "Index")
 			</a>
 
-			<div>
+			<div style="display: flex; flex-direction: column; gap: 10px">
 				<label>@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsSocial", "Index")</label>
 
-				<div style="display: flex; align-items: center; justify-content: center; font-size: 22px; text-align: center; color: var(--colorEnlace); margin-top: 10px;">
-					<div style="margin-left: 6px; margin-right: 6px;"><a href="@discord" target="_blank"><i class="fa-brands fa-discord"></i></a></div>
-					<div style="margin-left: 6px; margin-right: 6px;"><a href="@telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a></div>
-					<div style="margin-left: 6px; margin-right: 6px;"><a href="@reddit" target="_blank"><i class="fa-brands fa-reddit"></i></a></div>
-					<div style="margin-left: 6px; margin-right: 6px;"><a href="@twitter" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
-					<div style="margin-left: 6px; margin-right: 6px;"><a href="@steam" target="_blank"><i class="fa-brands fa-steam"></i></a></div>
-					<div style="margin-left: 6px; margin-right: 6px;"><a href="@rss" target="_blank"><i class="fa-solid fa-rss"></i></a></div>
-					<div style="margin-left: 6px; margin-right: 6px;"><a href="@bluesky" target="_blank"><i class="fa-brands fa-bluesky"></i></a></div>
-				</div>
+				<pepeizqs_deals_web.Pages.Componentes.Interfaz.RedesSociales idioma="@idioma" tamañoFuente="22px"/>
 			</div>
 		</div>
 	</div>
@@ -555,18 +547,10 @@ else
 			@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsMore", "Index")
 		</a>
 
-		<div>
+		<div style="display: flex; flex-direction: column; gap: 10px">
 			<label>@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsSocial", "Index")</label>
 
-			<div style="display: flex; align-items: center; justify-content: center; font-size: 22px; text-align: center; color: var(--colorEnlace); margin-top: 10px;">
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@discord" target="_blank"><i class="fa-brands fa-discord"></i></a></div>
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a></div>
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@reddit" target="_blank"><i class="fa-brands fa-reddit"></i></a></div>
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@twitter" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@steam" target="_blank"><i class="fa-brands fa-steam"></i></a></div>
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@rss" target="_blank"><i class="fa-solid fa-rss"></i></a></div>
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@bluesky" target="_blank"><i class="fa-brands fa-bluesky"></i></a></div>
-			</div>
+			<pepeizqs_deals_web.Pages.Componentes.Interfaz.RedesSociales idioma="@idioma" tamañoFuente="22px"/>
 		</div>
 	</div>
 }
@@ -780,14 +764,6 @@ else
 	[Parameter]
 	public string idioma { get; set; }
 
-	private string discord = string.Empty;
-	private string telegram = string.Empty;
-	private string reddit = string.Empty;
-	private string twitter = string.Empty;
-	private string steam = string.Empty;
-	private string rss = string.Empty;
-	private string bluesky = string.Empty;
-
 	private SqlConnection conexion = new SqlConnection();
 
 	private Usuario usuario = new Usuario();
@@ -806,16 +782,6 @@ else
 	{
 		if (HttpContext == null)
 		{
-			WebApplicationBuilder builder = WebApplication.CreateBuilder();
-
-			discord = builder.Configuration.GetValue<string>("RedesSociales:Discord");
-			telegram = builder.Configuration.GetValue<string>("RedesSociales:Telegram");
-			reddit = builder.Configuration.GetValue<string>("RedesSociales:Reddit");
-			twitter = builder.Configuration.GetValue<string>("RedesSociales:Twitter");
-			steam = builder.Configuration.GetValue<string>("RedesSociales:Steam");
-			rss = Herramientas.Idiomas.CogerRSS(idioma);
-			bluesky = builder.Configuration.GetValue<string>("RedesSociales:Bluesky");
-
 			usuario = await Herramientas.UsuarioDatos.Actualizar(HttpContextAccessor.HttpContext.User, usuario, UserManager, idioma);
 
 			if (usuario != null)
@@ -893,7 +859,7 @@ else
 
 				try
 				{
-					noticiasGestor = BaseDatos.Noticias.Buscar.Ultimas("10", conexion);
+					noticiasGestor = BaseDatos.Noticias.Buscar.Actuales(conexion);
 				}
 				catch (Exception ex)
 				{
