--- a/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
@@ -17,97 +17,106 @@
     }
 </script>
 
-@if (suscripcionesActuales.Count > 0)
+@if (suscripcionesActuales != null)
 {
-    <h1 style="font-size: 23px;">
-        @Herramientas.Idiomas.CogerCadena(idioma, "Subscriptions.String1")
-    </h1>
+    if (suscripcionesActuales.Count > 0)
+    {
+        <h1 style="font-size: 23px;">
+            @Herramientas.Idiomas.CogerCadena(idioma, "Subscriptions.String1")
+        </h1>
 
-    <div>
-        @foreach (var suscripcionActual in suscripcionesActuales)
-        {
-            <hr>
+        <div>
+            @foreach (var suscripcionActual in suscripcionesActuales)
+            {
+                <hr>
 
-            <div style="display: flex; align-items: start;">
-                <div class="perfil" style="width: 20%;">
-                    <img src="@suscripcionActual.Tipo.ImagenLogo" alt="@suscripcionActual.Tipo.Nombre"/>
-                </div>
+                <div style="display: flex; align-items: start;">
+                    <div class="perfil" style="width: 20%;">
+                        <img src="@suscripcionActual.Tipo.ImagenLogo" alt="@suscripcionActual.Tipo.Nombre" />
+                    </div>
 
-                <div class="perfil" style="width: 80%; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 20px;">
-                    @foreach (var juego in suscripcionActual.Juegos)
-                    {
-                        bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego.Juego, juego.DRM);
-                        bool usuarioTieneDeseado = false;
-
-                        string fondoColor = string.Empty;
-
-                        if (usuarioTieneJuego == true)
+                    <div class="perfil" style="width: 80%; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 20px;">
+                        @if (suscripcionActual.Juegos != null)
                         {
-                            fondoColor = "background-color: var(--fondoBien);";
-                        }
-                        else
-                        {
-                            usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego.Juego, juego.DRM);
-
-                            if (usuarioTieneDeseado == true)
+                            if (suscripcionActual.Juegos.Count > 0)
                             {
-                                fondoColor = "background-color: var(--fondoAlerta);";
+                                foreach (var juego in suscripcionActual.Juegos)
+                                {
+                                    bool usuarioTieneJuego = Herramientas.Tooltip.ComprobarUsuarioTieneJuego(usuario, juegosUsuario, juego.Juego, juego.DRM);
+                                    bool usuarioTieneDeseado = false;
+
+                                    string fondoColor = string.Empty;
+
+                                    if (usuarioTieneJuego == true)
+                                    {
+                                        fondoColor = "background-color: var(--fondoBien);";
+                                    }
+                                    else
+                                    {
+                                        usuarioTieneDeseado = Herramientas.Deseados.ComprobarSiEsta(usuario, juego.Juego, juego.DRM);
+
+                                        if (usuarioTieneDeseado == true)
+                                        {
+                                            fondoColor = "background-color: var(--fondoAlerta);";
+                                        }
+                                    }
+
+                                    bool usuarioConectado = false;
+
+                                    if (usuario != null)
+                                    {
+                                        usuarioConectado = true;
+                                    }
+
+                                    Herramientas.ToolTipDatos tooltipDatos = Herramientas.Tooltip.Generar(idioma, juego.Juego, juego.DRM, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado);
+
+                                    <div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.JuegoId.ToString()')">
+                                        <div id="tooltip-@juego.JuegoId.ToString()" class="tooltip-relleno">
+                                            @if (string.IsNullOrEmpty(tooltipDatos.Video) == false)
+                                            {
+                                                <video src="@tooltipDatos.Video" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
+                                            }
+
+                                            <div style="padding: 15px; text-align: center;">
+                                                <div style="text-align: center;">
+                                                    @tooltipDatos.Nombre
+                                                </div>
+
+                                                @if (string.IsNullOrEmpty(tooltipDatos.ReviewsIcono) == false && string.IsNullOrEmpty(tooltipDatos.ReviewsCantidad) == false)
+                                                {
+                                                    <div style="display: flex; align-items: center; margin-top: 5px; margin-bottom: 5px; padding: 5px; text-align: center; justify-content: center;">
+                                                        <img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" alt="Reviews" />
+                                                        <label style="font-size: 14px;">@tooltipDatos.ReviewsCantidad</label>
+                                                    </div>
+                                                }
+
+                                                @if (string.IsNullOrEmpty(tooltipDatos.UsuarioMensaje) == false)
+                                                {
+                                                    <div style="text-align: center;">
+                                                        @tooltipDatos.UsuarioMensaje
+                                                    </div>
+                                                }
+                                            </div>
+                                        </div>
+
+                                        <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 2px; @fondoColor" target="_blank">
+                                            <div>
+                                                <img src="@juego.Imagen" style="max-width: 100%; max-height: 100%;" alt="@juego.Nombre" />
+                                            </div>
+
+                                            <div style="display: flex; align-items: center; justify-content: right; height: 40px;">
+                                                <img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="max-width: 24px; max-height: 24px; margin: 10px;" alt="DRM" />
+                                            </div>
+                                        </a>
+                                    </div>
+                                }
                             }
                         }
-
-                        bool usuarioConectado = false;
-
-                        if (usuario != null)
-                        {
-                            usuarioConectado = true;
-                        }
-
-                        Herramientas.ToolTipDatos tooltipDatos = Herramientas.Tooltip.Generar(idioma, juego.Juego, juego.DRM, usuarioConectado, usuarioTieneJuego, usuarioTieneDeseado);
-
-                        <div class="tooltip-juego" onmousemove="hoverTooltip(event, 'tooltip-@juego.JuegoId.ToString()')">
-                            <div id="tooltip-@juego.JuegoId.ToString()" class="tooltip-relleno">
-                                @if (string.IsNullOrEmpty(tooltipDatos.Video) == false)
-                                {
-                                    <video src="@tooltipDatos.Video" autoplay="autoplay" loop muted style="width: 460px; height: 215px; object-fit: cover;" />
-                                }
-
-                                <div style="padding: 15px; text-align: center;">
-                                    <div style="text-align: center;">
-                                        @tooltipDatos.Nombre
-                                    </div>
-
-                                    @if (string.IsNullOrEmpty(tooltipDatos.ReviewsIcono) == false && string.IsNullOrEmpty(tooltipDatos.ReviewsCantidad) == false)
-                                    {
-                                        <div style="display: flex; align-items: center; margin-top: 5px; margin-bottom: 5px; padding: 5px; text-align: center; justify-content: center;">
-                                            <img src="@tooltipDatos.ReviewsIcono" style="width: 20px; height: 20px; margin-right: 15px;" alt="Reviews"/>
-                                            <label style="font-size: 14px;">@tooltipDatos.ReviewsCantidad</label>
-                                        </div>
-                                    }
-
-                                    @if (string.IsNullOrEmpty(tooltipDatos.UsuarioMensaje) == false)
-                                    {
-                                        <div style="text-align: center;">
-                                            @tooltipDatos.UsuarioMensaje
-                                        </div>
-                                    }
-                                </div>
-                            </div>
-
-                            <a href="@Herramientas.EnlaceAcortador.Generar(juego.Enlace, juego.Tipo)" class="boton-pequeño" style="padding: 2px; @fondoColor" target="_blank">
-                                <div>
-                                    <img src="@juego.Imagen" style="max-width: 100%; max-height: 100%;" alt="@juego.Nombre"/>
-                                </div>
-
-                                <div style="display: flex; align-items: center; justify-content: right; height: 40px;">
-                                    <img src="@Juegos.JuegoDRM2.SacarImagen(juego.DRM)" style="max-width: 24px; max-height: 24px; margin: 10px;" alt="DRM"/>
-                                </div>
-                            </a>
-                        </div>
-                    }
+                    </div>
                 </div>
-            </div>
-        }
-    </div> 
+            }
+        </div>
+    }
 }
 
 <div style="font-size: 23px; margin-top: 60px">
@@ -272,92 +281,49 @@
             años.Add(DateTime.Now.Year.ToString());
             años.Reverse();
 
-            añoSeleccionado = DateTime.Now.Year.ToString();
-
             //--------------------------------------------------------------------
 
-            juegos = BaseDatos.Suscripciones.Buscar.Todos();
+            List<Juegos.JuegoSuscripcion> juegosActuales = BaseDatos.Suscripciones.Buscar.Actuales();
 
-            if (juegos.Count > 0)
+            if (juegosActuales.Count > 0)
             {
-                List<Juegos.JuegoSuscripcion> juegosActuales = new List<Juegos.JuegoSuscripcion>();
-                List<Juegos.JuegoSuscripcion> juegosPasados = new List<Juegos.JuegoSuscripcion>();
-
-                foreach (var juego in juegos)
+                foreach (var juegoActual in juegosActuales)
                 {
-                    if (DateTime.Now >= juego.FechaEmpieza && DateTime.Now <= juego.FechaTermina)
-                    {
-                        Juegos.Juego juego2 = BaseDatos.Juegos.Buscar.UnJuego(juego.JuegoId.ToString());
+                    Juegos.Juego juego2 = BaseDatos.Juegos.Buscar.UnJuego(juegoActual.JuegoId.ToString());
 
-                        if (juego2.Tipo == Juegos.JuegoTipo.Game)
-                        {
-                            juego.Imagen = juego2.Imagenes.Library_600x900;
-                        }
-                        else if (juego2.Tipo == Juegos.JuegoTipo.DLC)
-                        {
-                            juego.Imagen = juego2.Imagenes.Capsule_231x87;
-                        }
-
-                        juego.Juego = juego2;
-                        juegosActuales.Add(juego);
-                    }
-                    else
+                    if (juego2.Tipo == Juegos.JuegoTipo.Game)
                     {
-                        juegosPasados.Add(juego);
+                        juegoActual.Imagen = juego2.Imagenes.Library_600x900;
                     }
+                    else if (juego2.Tipo == Juegos.JuegoTipo.DLC)
+                    {
+                        juegoActual.Imagen = juego2.Imagenes.Capsule_231x87;
+                    }
+
+                    juegoActual.Juego = juego2;
                 }
 
-                if (juegosActuales.Count > 0)
+                juegosActuales = juegosActuales.OrderBy(x => x.Nombre).ToList();
+
+                foreach (var suscripcion in Suscripciones2.SuscripcionesCargar.GenerarListado())
                 {
-                    juegosActuales = juegosActuales.OrderBy(x => x.Nombre).ToList();
+                    List<Juegos.JuegoSuscripcion> juegos2 = new List<Juegos.JuegoSuscripcion>();
 
-                    foreach (var suscripcion in Suscripciones2.SuscripcionesCargar.GenerarListado())
+                    foreach (var juego in juegosActuales)
                     {
-                        List<Juegos.JuegoSuscripcion> juegos2 = new List<Juegos.JuegoSuscripcion>();
-
-                        foreach (var juego in juegosActuales)
+                        if (juego.Tipo == suscripcion.Id)
                         {
-                            if (juego.Tipo == suscripcion.Id)
-                            {
-                                juegos2.Add(juego);
-                            }
-                        }
-
-                        if (juegos2.Count > 0)
-                        {
-                            Suscripciones2.SuscripcionComponente componente = new Suscripciones2.SuscripcionComponente();
-                            componente.Juegos = juegos2;
-                            componente.Tipo = suscripcion;
-
-                            suscripcionesActuales.Add(componente);
+                            juegos2.Add(juego);
                         }
                     }
-                }
 
-                if (juegosPasados.Count > 0)
-                {
-                    juegosPasados = juegosPasados.OrderBy(x => x.Nombre).ToList();
-
-                    foreach (var suscripcion in Suscripciones2.SuscripcionesCargar.GenerarListado())
+                    if (juegos2.Count > 0)
                     {
-                        List<Juegos.JuegoSuscripcion> juegos2 = new List<Juegos.JuegoSuscripcion>();
+                        Suscripciones2.SuscripcionComponente componente = new Suscripciones2.SuscripcionComponente();
+                        componente.Juegos = juegos2;
+                        componente.Tipo = suscripcion;
 
-                        foreach (var juego in juegosPasados)
-                        {
-                            if (juego.Tipo == suscripcion.Id)
-                            {
-                                juegos2.Add(juego);
-                            }
-                        }
-
-                        if (juegos2.Count > 0)
-                        {
-                            Suscripciones2.SuscripcionComponente componente = new Suscripciones2.SuscripcionComponente();
-                            componente.Juegos = juegos2;
-                            componente.Tipo = suscripcion;
-
-                            suscripcionesPasadas.Add(componente);
-                        }
+                        suscripcionesActuales.Add(componente);
                     }
                 }
             }
@@ -367,5 +333,34 @@
     private void CambiarAño(MouseEventArgs e, string nuevoAño)
     {
         añoSeleccionado = nuevoAño;
+
+        List<Juegos.JuegoSuscripcion> juegosPasados = BaseDatos.Suscripciones.Buscar.Año(añoSeleccionado);
+
+        if (juegosPasados.Count > 0)
+        {
+            suscripcionesPasadas.Clear();
+
+            foreach (var suscripcion in Suscripciones2.SuscripcionesCargar.GenerarListado())
+            {
+                List<Juegos.JuegoSuscripcion> juegos2 = new List<Juegos.JuegoSuscripcion>();
+
+                foreach (var juego in juegosPasados)
+                {
+                    if (juego.Tipo == suscripcion.Id)
+                    {
+                        juegos2.Add(juego);
+                    }
+                }
+
+                if (juegos2.Count > 0)
+                {
+                    Suscripciones2.SuscripcionComponente componente = new Suscripciones2.SuscripcionComponente();
+                    componente.Juegos = juegos2;
+                    componente.Tipo = suscripcion;
+
+                    suscripcionesPasadas.Add(componente);
+                }
+            }
+        }
     }
 }
