--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundles.razor
@@ -269,6 +269,8 @@
 			if (bundlesActuales.Count > 0)
 			{
 				bundleSeleccionado = bundlesActuales[0];
+
+				bundlesActuales = bundlesActuales.OrderBy(x => x.FechaTermina).ToList();
 			}
 		}		
 	}
