--- a/pepeizqs deals web/Pages/Index.cshtml
+++ b/pepeizqs deals web/Pages/Index.cshtml
@@ -21,7 +21,7 @@
 	canonical = enlace
 }))
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Portada>(RenderMode.ServerPrerendered, new
+@(await Html.RenderComponentAsync<Componentes.Secciones.Portada>(RenderMode.Server, new
 {
 	idioma = Model.idioma
 }))
