--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -72,14 +72,14 @@
 {
 	@if (adminLogeado == true)
 	{
-		@(await Html.RenderComponentAsync<Componentes.Admin.Juego>(RenderMode.ServerPrerendered, new { 
+		@(await Html.RenderComponentAsync<Componentes.Admin.Juego>(RenderMode.Server, new { 
 			idioma = Model.idioma,
 			juego = Model.juego 
 		}))
 	}
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Juego>(RenderMode.ServerPrerendered, new
+@(await Html.RenderComponentAsync<Componentes.Secciones.Juego>(RenderMode.Server, new
 {
 	idioma = Model.idioma, 
 	juego = Model.juego
