--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
@@ -18,7 +18,7 @@
 		{
 			<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px; display: flex; align-items: center; gap: 30px;">
 				<div style="width: 50%;">
-					<img src="@noticiaMostrar.Imagen" style="width: 100%; height: 100%;" />
+					<img src="@noticiaMostrar.Imagen" style="width: 100%; height: 100%; border: 1px solid var(--fondoBotonPequeño);" />
 				</div>
 
 				<div style="width: 100%; display: flex; flex-direction: column; gap: 20px;">
@@ -74,8 +74,6 @@
 								</div>
 							}
 						}
-
-						
 					</div>
 				</div>
 			</div>
