--- a/pepeizqs deals web/Pages/publisher.cshtml
+++ b/pepeizqs deals web/Pages/publisher.cshtml
@@ -73,13 +73,44 @@
         imagen = Model.publisher.Imagen
     }))
 
-    @(await Html.RenderComponentAsync<Componentes.Secciones.Publisher>(RenderMode.ServerPrerendered, new
-    {
-        idioma = Model.idioma,
-        id = Model.publisher.Id,
-        nombre = Model.publisher.Nombre,
-        descripcion = Model.publisher.Descripcion,
-        imagen = Model.publisher.Imagen,
-        acepciones = Model.publisher.Acepciones
-    }))
+	bool prerenderizado = false;
+	string userAgent = string.Empty;
+
+	if (HttpContext != null)
+	{
+		userAgent = HttpContext.Request.Headers.UserAgent;
+
+		if (string.IsNullOrEmpty(userAgent) == false)
+		{
+			if (userAgent.Contains("http://www.google.com/bot.html") == true || userAgent.Contains("http://www.bing.com/bingbot.htm") == true)
+			{
+				prerenderizado = true;
+			}
+		}
+	}
+
+	if (prerenderizado == true)
+	{
+        @(await Html.RenderComponentAsync<Componentes.Secciones.Publisher>(RenderMode.ServerPrerendered, new
+        {
+            idioma = Model.idioma,
+            id = Model.publisher.Id,
+            nombre = Model.publisher.Nombre,
+            descripcion = Model.publisher.Descripcion,
+            imagen = Model.publisher.Imagen,
+            acepciones = Model.publisher.Acepciones
+        }))
+	}
+	else
+	{
+        @(await Html.RenderComponentAsync<Componentes.Secciones.Publisher>(RenderMode.Server, new
+        {
+            idioma = Model.idioma,
+            id = Model.publisher.Id,
+            nombre = Model.publisher.Nombre,
+            descripcion = Model.publisher.Descripcion,
+            imagen = Model.publisher.Imagen,
+            acepciones = Model.publisher.Acepciones
+        }))
+	}
 }
