--- a/pepeizqs deals web/Pages/Bundles.cshtml
+++ b/pepeizqs deals web/Pages/Bundles.cshtml
@@ -53,6 +53,35 @@
 	descripcion = descripcion
 }))
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Bundles>(RenderMode.Server, new { 
-	idioma = Model.idioma
-}))
+@{
+	bool prerenderizado = false;
+	string userAgent = string.Empty;
+
+	if (HttpContext != null)
+	{
+		userAgent = HttpContext.Request.Headers.UserAgent;
+
+		if (string.IsNullOrEmpty(userAgent) == false)
+		{
+			if (userAgent.Contains("http://www.google.com/bot.html") == true || userAgent.Contains("http://www.bing.com/bingbot.htm") == true)
+			{
+				prerenderizado = true;
+			}
+		}
+	}
+
+	if (prerenderizado == true)
+	{
+		@(await Html.RenderComponentAsync<Componentes.Secciones.Bundles>(RenderMode.ServerPrerendered, new
+		{
+			idioma = Model.idioma
+		}))
+	}
+	else
+	{
+		@(await Html.RenderComponentAsync<Componentes.Secciones.Bundles>(RenderMode.Server, new
+		{
+			idioma = Model.idioma
+		}))
+	}
+}
