--- a/pepeizqs deals web/Pages/Game.cshtml
+++ b/pepeizqs deals web/Pages/Game.cshtml
@@ -79,8 +79,37 @@
 	}
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Juego>(RenderMode.Server, new
-{
-	idioma = Model.idioma, 
-	juego = Model.juego
-}))
+@{
+	bool prerenderizado = false;
+	string userAgent = string.Empty;
+
+	if (HttpContext != null)
+	{
+		userAgent = HttpContext.Request.Headers.UserAgent;
+
+		if (string.IsNullOrEmpty(userAgent) == false)
+		{
+			if (userAgent.Contains("http://www.google.com/bot.html") == true || userAgent.Contains("http://www.bing.com/bingbot.htm") == true)
+			{
+				prerenderizado = true;
+			}
+		}
+	}
+
+	if (prerenderizado == true)
+	{
+		@(await Html.RenderComponentAsync<Componentes.Secciones.Juego>(RenderMode.ServerPrerendered, new
+		{
+			idioma = Model.idioma,
+			juego = Model.juego
+		}))
+	}
+	else
+	{
+		@(await Html.RenderComponentAsync<Componentes.Secciones.Juego>(RenderMode.Server, new
+		{
+			idioma = Model.idioma,
+			juego = Model.juego
+		}))
+	}
+}
