--- a/pepeizqs deals web/Pages/News.cshtml
+++ b/pepeizqs deals web/Pages/News.cshtml
@@ -58,7 +58,37 @@
 	}
 }
 
-@(await Html.RenderComponentAsync<Componentes.Secciones.Noticia>(RenderMode.ServerPrerendered, new { 
-	idioma = Model.idioma, 
-	noticiaId = Model.noticia.Id 
-}))
+@{
+	bool prerenderizado = false;
+	string userAgent = string.Empty;
+
+	if (HttpContext != null)
+	{
+		userAgent = HttpContext.Request.Headers.UserAgent;
+
+		if (string.IsNullOrEmpty(userAgent) == false)
+		{
+			if (userAgent.Contains("http://www.google.com/bot.html") == true || userAgent.Contains("http://www.bing.com/bingbot.htm") == true)
+			{
+				prerenderizado = true;
+			}
+		}
+	}
+
+	if (prerenderizado == true)
+	{
+		@(await Html.RenderComponentAsync<Componentes.Secciones.Noticia>(RenderMode.ServerPrerendered, new
+		{
+			idioma = Model.idioma,
+			noticiaId = Model.noticia.Id
+		}))
+	}
+	else
+	{
+		@(await Html.RenderComponentAsync<Componentes.Secciones.Noticia>(RenderMode.Server, new
+		{
+			idioma = Model.idioma,
+			noticiaId = Model.noticia.Id
+		}))
+	}
+}
