--- a/pepeizqs deals web/Pages/filter.cshtml
+++ b/pepeizqs deals web/Pages/filter.cshtml
@@ -9,11 +9,38 @@
 
 @if (string.IsNullOrEmpty(Model.ids) == false)
 {
-    @(await Html.RenderComponentAsync<Componentes.Secciones.Filtro>(RenderMode.Server, new
-    {
-        idioma = Model.idioma,
-        ids = Model.ids
-    }))
+	bool prerenderizado = false;
+	string userAgent = string.Empty;
+
+	if (HttpContext != null)
+	{
+		userAgent = HttpContext.Request.Headers.UserAgent;
+
+		if (string.IsNullOrEmpty(userAgent) == false)
+		{
+			if (userAgent.Contains("http://www.google.com/bot.html") == true || userAgent.Contains("http://www.bing.com/bingbot.htm") == true)
+			{
+				prerenderizado = true;
+			}
+		}
+	}
+
+	if (prerenderizado == true)
+	{
+		@(await Html.RenderComponentAsync<Componentes.Secciones.Filtro>(RenderMode.ServerPrerendered, new
+		{
+			idioma = Model.idioma,
+			ids = Model.ids
+		}))
+	}
+	else
+	{
+		@(await Html.RenderComponentAsync<Componentes.Secciones.Filtro>(RenderMode.Server, new
+		{
+			idioma = Model.idioma,
+			ids = Model.ids
+		}))
+	}
 }
 else
 {
